# mkmg1

./: .gitignore  .gitmodules
cad/: CMakeLists.txt
cad/shaders/cursor/: fs.glsl  vs.glsl
cad/shaders/grid/: fs.glsl  vs.glsl
cad/shaders/point/: vs.glsl
cad/shaders/rotation_ball/: fs.glsl
cad/shaders/torus/: fs.glsl  vs.glsl
cad/src/: callbacks_and_io.h  debugging.h  geometry.h  glad.c  glad.h  lru_cache.h  main.cpp  myglm.h
cad/src/math/: mat3.cpp  mat3.h  vec3.cpp  vec3.h  vec4.cpp
cad/src/utility/: shader_manager.h
lab1/: CMakeLists.txt  main.cpp  mat4.cpp  mat4.h  vec4.h
